<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
  android:gravity="center"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/colorBackgroundWhite"
    android:orientation="vertical">



    <com.example.lenovo.prozhito.CustomViews.MyTextView
        android:id="@+id/showResult"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/colorErrorList"
        android:textSize="12sp" />

    <com.example.lenovo.prozhito.CustomViews.MyEditText
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:background="@drawable/style_edit_text"
        android:drawablePadding="2dp"
        android:drawableRight="@drawable/phoneedittext"
        android:gravity="right|center"
        android:hint="@string/phone_edit_text"
        android:inputType="number"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:textColor="@color/colorEditText"
        android:textColorHint="@drawable/style_hint_edittext"
        android:textSize="12sp" />

    <com.example.lenovo.prozhito.CustomViews.MyEditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:layout_marginTop="3dp"
        android:background="@drawable/style_edit_text"
        android:drawablePadding="2dp"
        android:drawableRight="@drawable/passwordedittext"
        android:gravity="right|center"
        android:hint="@string/password_signUp"
        android:inputType="textPassword"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:textColor="@color/colorEditText"
        android:textColorHint="@drawable/style_hint_edittext"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <com.example.lenovo.prozhito.CustomViews.MyTextView
            android:id="@+id/forget_pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/forget_pass_text"
            android:textColor="@color/colorDefaultText"
            android:textSize="12sp" />

        <com.example.lenovo.prozhito.CustomViews.MyTextView
            android:id="@+id/forget_pass"
            android:textColor="@color/colorButtonSignUp"
            android:textSize="12sp"
            android:layout_toStartOf="@id/forget_pass_title"
            android:layout_width="wrap_content"
            android:text="@string/forget_pass"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <com.example.lenovo.prozhito.CustomViews.MyButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_button_signup"
        android:gravity="center"
        android:text="@string/logIn"
        android:textColor="@color/colorBackgroundWhite"
        android:textSize="16sp" />

</LinearLayout>