<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@drawable/style_edit_text">

    <com.example.lenovo.prozhito.CustomViews.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:padding="5dp"
        android:text="@string/forget_pass"
        android:textColor="@color/colorDefaultTextDark"
        android:textSize="14sp" />

    <com.example.lenovo.prozhito.CustomViews.MyTextView
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/error_phone_sign_up"
        android:textColor="@color/colorBorderBackground"
        android:textSize="12sp" />

    <com.example.lenovo.prozhito.CustomViews.MyTextView
        android:id="@+id/showResult"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorErrorList"
        android:textSize="12sp" />

    <com.example.lenovo.prozhito.CustomViews.MyEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/hint_edit_text_forgot_pass"
        android:gravity="start|center"
        android:layout_margin="15dp"
        android:textSize="12sp"
        android:padding="3dp"
        android:inputType="number"
        android:textColorHint="@drawable/style_hint_edittext"
        android:background="@drawable/style_edit_text" />

    <com.example.lenovo.prozhito.CustomViews.MyButton
        android:id="@+id/send_password"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"

        android:text="@string/send_password"
        android:textColor="@color/colorBackgroundWhite"
        android:background="@drawable/style_button_send_code_again"
        android:layout_gravity="start"
        android:layout_height="wrap_content" />


</LinearLayout>