<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/style_background_confirm_code"
        android:gravity="center"
        android:orientation="vertical">

        <com.example.lenovo.prozhito.CustomViews.MyTextView
            android:id="@+id/confirm_code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:text="@string/confirm_code_label"
            android:textColor="@color/colorDefaultTextDark"
            android:textSize="16sp" />

        <com.example.lenovo.prozhito.CustomViews.MyEditText
            android:id="@+id/confirm_code_editText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:focusable="false"
            android:layout_marginRight="15dp"
            android:background="@drawable/style_edit_text"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorDefaultTextDark" />

        <com.example.lenovo.prozhito.CustomViews.MyTextView
            android:id="@+id/confirm_code_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/explain_code_again"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorDefaultText"
            android:textSize="12sp" />

        <com.example.lenovo.prozhito.CustomViews.MyButton
            android:id="@+id/send_code_confirm_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/style_button_send_code_again"
            android:text="@string/confirm_code_again"
            android:textColor="@color/colorBackgroundWhite"
            android:textSize="14sp" />
    </LinearLayout>



</LinearLayout>