<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/user_profile_avatar"
            app:civ_border_color="@color/colorBackgroundWhite"
            app:civ_border_width="1dp" />

        <com.example.lenovo.prozhito.CustomViews.MyTextView
            android:id="@+id/showResult"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorErrorList"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="2"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.example.lenovo.prozhito.CustomViews.MyEditText
            android:id="@+id/user_name_family"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/style_edit_text"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/useredittext"
            android:gravity="right|center"
            android:hint="@string/Name_family_signUp"
            android:inputType="text"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:textColor="@color/colorEditText"
            android:textColorHint="@drawable/style_hint_edittext"
            android:textSize="12sp" />

        <com.example.lenovo.prozhito.CustomViews.MyEditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/style_edit_text"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/phoneedittext"
            android:ems="11"
            android:gravity="right|center"
            android:hint="@string/phone_edit_text"
            android:inputType="number"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:textColor="@color/colorEditText"
            android:textColorHint="@drawable/style_hint_edittext"
            android:textSize="12sp" />

        <com.example.lenovo.prozhito.CustomViews.MyEditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/style_edit_text"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/passwordedittext"
            android:gravity="right|center"
            android:hint="@string/password_signUp"
            android:inputType="textPassword"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:textColor="@color/colorEditText"
            android:textColorHint="@drawable/style_hint_edittext"
            android:textSize="12sp" />

        <com.example.lenovo.prozhito.CustomViews.MyButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_button_signup"
            android:gravity="center"
            android:text="@string/sign_up_and_send_code_text"
            android:textColor="@color/colorBackgroundWhite"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>