<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    android:orientation="vertical"
    android:weightSum="3">


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:background="@drawable/splashscreen" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center">

                <com.example.lenovo.prozhito.CustomViews.MyTextView
                    android:id="@+id/explain_about_app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/explain_about_app_text"
                    android:textColor="@color/colorDefaultText"
                    android:textDirection="rtl"
                    android:textSize="12sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center">


                <com.example.lenovo.prozhito.CustomViews.MyButton
                    android:id="@+id/sign_up_text"
                    android:layout_width="match_parent"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/style_button_signup"
                    android:gravity="center"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/colorBackgroundWhite"
                    android:textSize="16sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <com.example.lenovo.prozhito.CustomViews.MyTextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/logIn_text"
                    android:textColor="@color/colorLoginText"
                    android:textSize="12sp" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>





